# AhmetMSA_project

./: main.py  pyproject.toml  readme.md
ahmetmsa/: __init__.py  dp_aligner.py  progressive.py
